--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -7,3 +7,11 @@
   font-weight: bold;
   margin-right: 20px;
 }
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.input[type="number"] {
+  -moz-appearance: textfield;
+}
