--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,22 +1,25 @@
 .nav {
+  position: sticky;
+  top: 0;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   padding: 10px 10%;
   background-color: rgb(211, 39, 39);
 }
-.para{
+.para {
   color: white;
   font-size: 30px;
   font-weight: bold;
   padding: 0;
   margin: 0;
 }
-.image{
-    background-color: burlywood;
-    width: 100%;
-    height: 200px;
-    font-size: 35px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
+.image {
+  background-color: burlywood;
+  width: 100%;
+  height: 200px;
+  font-size: 35px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
 }
