--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -10,7 +10,7 @@
 .modal {
   padding: 15px;
   position: fixed;
-  top: 30vh;
+  top: 20vh;
   left: 10%;
   width: 80%;
   overflow: hidden;
@@ -19,4 +19,5 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  max-height: 60vh;
 }
